--- a/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
+++ b/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
@@ -84,17 +84,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{260, 288}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSNextKeyView" ref="215279567"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-							<object class="IBUIImageView" id="215279567">
-								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
-								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSNextKeyView" ref="821928283"/>
+								<reference key="NSNextKeyView" ref="36105668"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -190,7 +180,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{187, 74}, {63, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -274,6 +263,22 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUIView" id="36105668">
+								<reference key="NSNextResponder" ref="215313039"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
+								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSNextKeyView" ref="821928283"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+									<object class="NSColorSpace" key="NSCustomColorSpace">
+										<int key="NSID">2</int>
+									</object>
+								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 						<string key="NSFrame">{{30, 91}, {260, 288}}</string>
@@ -378,6 +383,14 @@
 					<int key="connectionID">51</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">avatar</string>
+						<reference key="source" ref="924805324"/>
+						<reference key="destination" ref="36105668"/>
+					</object>
+					<int key="connectionID">55</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickMask:</string>
 						<reference key="source" ref="876898479"/>
@@ -438,10 +451,10 @@
 							<reference ref="209270839"/>
 							<reference ref="472840128"/>
 							<reference ref="821928283"/>
-							<reference ref="215279567"/>
 							<reference ref="533340619"/>
 							<reference ref="273470397"/>
 							<reference ref="695897427"/>
+							<reference ref="36105668"/>
 						</array>
 						<reference key="parent" ref="924805324"/>
 					</object>
@@ -471,11 +484,6 @@
 						<reference key="parent" ref="215313039"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="215279567"/>
-						<reference key="parent" ref="215313039"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
 						<reference key="object" ref="533340619"/>
 						<reference key="parent" ref="215313039"/>
@@ -490,6 +498,11 @@
 						<reference key="object" ref="695897427"/>
 						<reference key="parent" ref="215313039"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">54</int>
+						<reference key="object" ref="36105668"/>
+						<reference key="parent" ref="215313039"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -497,7 +510,6 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -505,6 +517,8 @@
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="54.CustomClassName">DiceAvatarView</string>
+				<string key="54.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -514,7 +528,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">53</int>
+			<int key="maxID">55</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
