--- a/Draw/Controller/Common/DiceRoomPasswordDialog.xib
+++ b/Draw/Controller/Common/DiceRoomPasswordDialog.xib
@@ -45,7 +45,7 @@
 							<object class="IBUIImageView" id="141245721">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{0, -13}, {290, 215}}</string>
+								<string key="NSFrameSize">{290, 215}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="146925368"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -58,8 +58,9 @@
 							<object class="IBUIButton" id="244077518">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{185, 142}, {84, 37}}</string>
+								<string key="NSFrame">{{185, 148}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -87,7 +88,7 @@
 							<object class="IBUIButton" id="755309997">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">286</int>
-								<string key="NSFrame">{{20, 142}, {84, 37}}</string>
+								<string key="NSFrame">{{20, 148}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="244077518"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -104,7 +105,7 @@
 							<object class="IBUITextField" id="973088010">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">314</int>
-								<string key="NSFrame">{{104, 48}, {166, 31}}</string>
+								<string key="NSFrame">{{104, 54}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="445091174"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="826739735">
@@ -145,7 +146,7 @@
 							<object class="IBUITextField" id="914890163">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">314</int>
-								<string key="NSFrame">{{104, 100}, {166, 31}}</string>
+								<string key="NSFrame">{{104, 106}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="755309997"/>
 								<reference key="IBUIBackgroundColor" ref="826739735"/>
@@ -170,7 +171,7 @@
 							<object class="IBUIButton" id="146925368">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">306</int>
-								<string key="NSFrame">{{50, -2}, {190, 37}}</string>
+								<string key="NSFrame">{{50, 4}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="477338562"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -194,7 +195,7 @@
 							<object class="IBUILabel" id="477338562">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 48}, {89, 32}}</string>
+								<string key="NSFrame">{{15, 54}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="973088010"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -227,7 +228,7 @@
 							<object class="IBUILabel" id="445091174">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 100}, {89, 32}}</string>
+								<string key="NSFrame">{{15, 106}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
 								<reference key="NSNextKeyView" ref="914890163"/>
 								<bool key="IBUIOpaque">NO</bool>
