--- a/Draw/Controller/Common/DiceInputDialog~ipad.xib
+++ b/Draw/Controller/Common/DiceInputDialog~ipad.xib
@@ -39,14 +39,13 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="281484817">
 						<reference key="NSNextResponder" ref="954546886"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="265356187">
 								<reference key="NSNextResponder" ref="281484817"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{290, 180}</string>
+								<string key="NSFrameSize">{696, 392}</string>
 								<reference key="NSSuperview" ref="281484817"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="544746052"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,10 +56,9 @@
 							</object>
 							<object class="IBUIButton" id="544746052">
 								<reference key="NSNextResponder" ref="281484817"/>
-								<int key="NSvFlags">306</int>
-								<string key="NSFrame">{{50, 14}, {190, 41}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{120, 38}, {456, 89}}</string>
 								<reference key="NSSuperview" ref="281484817"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1010807730"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -79,20 +77,19 @@
 								<reference key="IBUINormalTitleShadowColor" ref="611711729"/>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
-									<double key="pointSize">20</double>
+									<double key="pointSize">40</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">20</double>
+									<double key="NSSize">40</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUITextField" id="1010807730">
 								<reference key="NSNextResponder" ref="281484817"/>
-								<int key="NSvFlags">314</int>
-								<string key="NSFrame">{{20, 67}, {250, 35}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{48, 154}, {600, 76}}</string>
 								<reference key="NSSuperview" ref="281484817"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="89685014"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="1037488191">
 									<int key="NSColorSpace">3</int>
@@ -120,20 +117,19 @@
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">14</double>
+									<double key="pointSize">28</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">14</double>
+									<double key="NSSize">28</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="89685014">
 								<reference key="NSNextResponder" ref="281484817"/>
-								<int key="NSvFlags">286</int>
-								<string key="NSFrame">{{23, 117}, {83, 41}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{55, 262}, {199, 89}}</string>
 								<reference key="NSSuperview" ref="281484817"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="615637972"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -143,23 +139,21 @@
 								<reference key="IBUIHighlightedTitleColor" ref="611711729"/>
 								<reference key="IBUINormalTitleColor" ref="611711729"/>
 								<reference key="IBUINormalTitleShadowColor" ref="20471014"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="260972574">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="912551056">
 									<int key="type">2</int>
-									<double key="pointSize">16</double>
+									<double key="pointSize">32</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="741470990">
+								<object class="NSFont" key="IBUIFont" id="514388535">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">16</double>
+									<double key="NSSize">32</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="615637972">
 								<reference key="NSNextResponder" ref="281484817"/>
-								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{183, 117}, {83, 41}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{439, 262}, {199, 89}}</string>
 								<reference key="NSSuperview" ref="281484817"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -168,21 +162,19 @@
 								<reference key="IBUIHighlightedTitleColor" ref="611711729"/>
 								<reference key="IBUINormalTitleColor" ref="611711729"/>
 								<reference key="IBUINormalTitleShadowColor" ref="20471014"/>
-								<reference key="IBUIFontDescription" ref="260972574"/>
-								<reference key="IBUIFont" ref="741470990"/>
+								<reference key="IBUIFontDescription" ref="912551056"/>
+								<reference key="IBUIFont" ref="514388535"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{15, 20}, {290, 180}}</string>
+						<string key="NSFrame">{{36, 43}, {696, 392}}</string>
 						<reference key="NSSuperview" ref="954546886"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="265356187"/>
 						<reference key="IBUIBackgroundColor" ref="1037488191"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 460}</string>
+				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="281484817"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -356,88 +348,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">18</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="okButton">UIButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
