--- a/Draw/Controller/Common/DicePassWordDialog.xib
+++ b/Draw/Controller/Common/DicePassWordDialog.xib
@@ -58,10 +58,9 @@
 							<object class="IBUIButton" id="498659464">
 								<reference key="NSNextResponder" ref="503700453"/>
 								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{185, 178}, {84, 37}}</string>
+								<string key="NSFrame">{{185, 181}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="503700453"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -89,7 +88,7 @@
 							<object class="IBUIButton" id="841279221">
 								<reference key="NSNextResponder" ref="503700453"/>
 								<int key="NSvFlags">286</int>
-								<string key="NSFrame">{{20, 178}, {84, 37}}</string>
+								<string key="NSFrame">{{20, 181}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="503700453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="498659464"/>
@@ -146,7 +145,7 @@
 							<object class="IBUITextField" id="1013914060">
 								<reference key="NSNextResponder" ref="503700453"/>
 								<int key="NSvFlags">314</int>
-								<string key="NSFrame">{{20, 94}, {250, 31}}</string>
+								<string key="NSFrame">{{20, 97}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="503700453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="50901380"/>
@@ -176,7 +175,7 @@
 							<object class="IBUITextField" id="50901380">
 								<reference key="NSNextResponder" ref="503700453"/>
 								<int key="NSvFlags">314</int>
-								<string key="NSFrame">{{20, 138}, {250, 31}}</string>
+								<string key="NSFrame">{{20, 141}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="503700453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="841279221"/>
@@ -206,7 +205,7 @@
 							<object class="IBUIButton" id="806196521">
 								<reference key="NSNextResponder" ref="503700453"/>
 								<int key="NSvFlags">306</int>
-								<string key="NSFrame">{{50, 11}, {190, 37}}</string>
+								<string key="NSFrame">{{50, 14}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="503700453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="27142342"/>
@@ -464,6 +463,25 @@
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FontButton</string>
 					<string key="superclassName">UIButton</string>
